--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,10 +63,14 @@ jobs:
       ENV_FILE_CONTENT: ${{ secrets.ENV_FILE_CONTENT }}
     steps:
       - uses: actions/checkout@v3
-      - name: Setup SSH agent
-        uses: webfactory/ssh-agent@v0.7.0
-        with:
-          ssh-private-key: ${{ secrets.VPS_SSH_PRIVATE_KEY }}
+      - name: Setup SSH key and agent
+        run: |
+          echo "${{ secrets.VPS_SSH_PRIVATE_KEY }}" > /tmp/private_key
+          chmod 600 /tmp/private_key
+          # convert to PEM format for libcrypto compatibility
+          ssh-keygen -p -m PEM -f /tmp/private_key -P "" -N ""
+          eval "$(ssh-agent -s)"
+          ssh-add /tmp/private_key
       - name: Deploy commands
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_SSH_USER }}@${{ secrets.VPS_SSH_HOST }} << 'EOF'
