--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,11 +65,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup SSH key
         run: |
-          # Записываем и готовим приватный ключ для подключения
-          printf '%s\n' "${{ secrets.VPS_SSH_PRIVATE_KEY }}" | sed 's/^ *//' > /tmp/private_key
+          # Декодируем ключ из Base64 и записываем в файл
+          echo "${{ secrets.VPS_SSH_PRIVATE_KEY }}" | base64 -d > /tmp/private_key
           chmod 600 /tmp/private_key
-          # Преобразуем в PEM для совместимости
-          ssh-keygen -p -m PEM -f /tmp/private_key -P "" -N ""
       - name: Deploy commands
         run: |
           ssh -i /tmp/private_key -o StrictHostKeyChecking=no ${{ secrets.VPS_SSH_USER }}@${{ secrets.VPS_SSH_HOST }} \
