--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup SSH key
         run: |
-          # Декодируем ключ из Base64 и записываем в файл
-          echo "${{ secrets.VPS_SSH_PRIVATE_KEY }}" | base64 -d > /tmp/private_key
+          # Записываем приватный ключ в файл
+          printf '%s\n' "${{ secrets.VPS_SSH_PRIVATE_KEY }}" > /tmp/private_key
           chmod 600 /tmp/private_key
       - name: Deploy commands
         run: |
