--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup SSH key
         run: |
-          # Записываем приватный ключ в файл
-          printf '%s\n' "${{ secrets.VPS_SSH_PRIVATE_KEY }}" > /tmp/private_key
+          # Сохраняем исходный PEM PKCS8 ключ
+          printf '%s\n' "${{ secrets.VPS_SSH_PRIVATE_KEY }}" > /tmp/key.pem
+          chmod 600 /tmp/key.pem
+          # Конвертируем PKCS8 в OpenSSH-совместимый формат
+          openssl pkey -in /tmp/key.pem -out /tmp/private_key
           chmod 600 /tmp/private_key
       - name: Deploy commands
         run: |
